# avr-setup

./: CMakeLists.txt  README.md  compile_flags.txt  generic-avr-gcc.cmake
